--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,12 +1,19 @@
-<%# navigation styled for Zurb Foundation 4 %>
-<nav class="top-bar">
-  <ul class="title-area">
-    <li class="name"><%= link_to 'Home', root_path %></li>
-    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-  </ul>
-  <div class="top-bar-section">
-    <ul>
-      <%= render 'layouts/navigation_links' %>
-    </ul>
-  </div>
+<nav class="tab-bar">
+  <section class="left-small">
+    <a class="left-off-canvas-toggle menu-icon" ><span></span></a>
+  </section>
+  
+  <section class="middle tab-bar-section">
+    <h1 class="name"><%= link_to 'WeFeed', root_path %></h1>
+  </section>
+  
+  <section class="right-small">
+    <a class="right-off-canvas-toggle menu-icon" ><span></span></a>
+  </section>
 </nav>
+
+  <%= render 'layouts/left_menu' %>
+
+
+<%= render 'layouts/navigation_links' %>
+
