--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,21 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>User:</strong>
-  <%= @post.user_id %>
-</p>
-
-<p>
-  <strong>Url:</strong>
-  <%= @post.url %>
-</p>
-
-<p>
-  <strong>Summary:</strong>
-  <%= @post.summary %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<div class="large-6 columns">
+  <p id="notice"><%= notice %></p>
+  
+  <p>
+    <strong>User:</strong>
+    <%= @post.user_id %>
+  </p>
+  
+  <p>
+    <strong>Url:</strong>
+    <%= @post.url %>
+  </p>
+  
+  <p>
+    <strong>Summary:</strong>
+    <%= @post.summary %>
+  </p>
+  
+  <%= link_to 'Edit', edit_post_path(@post) %> |
+  <%= link_to 'Back', posts_path %>
+</div>
