--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -8,13 +8,13 @@
     <div class="small-2 columns small-3"><img src="http://placehold.it/80x80&text=[img]" /></div>
     <div class="small-10 columns">
       <%= link_to activity.owner.name, activity.owner if activity.owner %>
-      <%= render_activity activity %>          <ul class="inline-list">
-      <li><a href="">Reply</a></li>
-      <li><a href="">Share</a></li>
+      <%= render_activity activity %>          
+      <ul class="inline-list">
+        <li><a href="">Reply</a></li>
+        <li><a href="">Share</a></li>
       </ul>
     </div>
   </div>
   <!-- End Feed Entry -->
   <% end %>
-  <hr /> 
 </div>
