--- a/app/views/layouts/_left_menu.html.erb
+++ b/app/views/layouts/_left_menu.html.erb
@@ -1,35 +1,12 @@
+
 <aside class="left-off-canvas-menu">
   <ul class="off-canvas-list">
-    <li><label>current_user.name</label></li>
-    <a href="#"><img src="http://placehold.it/300x240&text=[img]" /></a>
+    <% if user_signed_in? %>
+    <li><label><%=current_user.name%></label></li>
+    <li><%= link_to image_tag("#{current_user.photo_location}"), edit_user_registration_path %></li>
+    <% else %>
+    <li><label>not signed in</label></li>
+    <% end %>
+    <li><a href="#">Some Link</a></li>
   </ul>
-  
 </aside>
-
-<div class="large-3 columns ">
-  <div class="panel">
-    <a href="#"><img src="http://placehold.it/300x240&text=[img]" /></a>
-    <h5><a href="#">Your Name</a></h5>
-    <div class="section-container vertical-nav" data-section data-options="deep_linking: false; one_up: true">
-      <section class="section">
-        <h5 class="title"><a href="#">Section 1</a></h5>
-      </section>
-      <section class="section">
-        <h5 class="title"><a href="#">Section 2</a></h5>
-      </section>
-      <section class="section">
-        <h5 class="title"><a href="#">Section 3</a></h5>
-      </section>
-      <section class="section">
-        <h5 class="title"><a href="#">Section 4</a></h5>
-      </section>
-      <section class="section">
-        <h5 class="title"><a href="#">Section 5</a></h5>
-      </section>
-      <section class="section">
-        <h5 class="title"><a href="#">Section 6</a></h5>
-      </section>
-    </div>
-    
-  </div>
-</div>
