added in user followers porfile logic

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
 <%= session[:omniauth].photo_location %>
 <%= session[:omniauth].name %>
   <div class="form-inputs">
-    <% if session[:omniauth] %>
+    <% if session[:omniauth].provider == 'twitter' %>
     <%= f.hidden_field :photo_location, :value => session[:omniauth].photo_location.sub("_normal", "").to_s %>
     <%= f.hidden_field :name, :value => session[:omniauth].name %>
     <% end %>
