--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,10 @@
             <div class="row">
               <!-- Nav Sidebar -->
               <!-- This is source ordered to be pulled to the left on larger screens -->
-              
+              <div class="small-9 columns">
               <%= yield %>
               <%= javascript_include_tag "application" %>
-              
+              </div>
               <!-- On small devices this column is hidden -->
               <aside class="large-3 columns hide-for-small">
                 <p><img src="http://placehold.it/300x440&text=[ad]" /></p>
