--- a/app/views/layouts/_left_menu.html.erb
+++ b/app/views/layouts/_left_menu.html.erb
@@ -3,7 +3,7 @@
   <ul class="off-canvas-list">
     <% if user_signed_in? %>
     <li><label><%=current_user.name%></label></li>
-    <li><%= link_to image_tag("#{current_user.photo_location}"), edit_user_registration_path %></li>
+    <li><%= link_to image_tag("#{current_user.photo_location}"), current_user %></li>
     <% else %>
     <li><label>not signed in</label></li>
     <% end %>
