--- a/app/views/users/_my_followers.html.erb
+++ b/app/views/users/_my_followers.html.erb
@@ -6,7 +6,7 @@
   <%= link_to image_tag("#{friendship.friend.photo_location}"), friendship.friend, :class => "th" %>
   </div>
   <h5><%= link_to friendship.friend.name, friendship.friend %></h5>
-  <%= link_to "remove", friendship, :class => "button tiny", :method => :delete, :remote => true %>
+  <%= link_to "Unfollow", friendship, :class => "button alert tiny", :method => :delete, :remote => true %>
   
   <% end %>
   
@@ -20,10 +20,10 @@
   <%= link_to image_tag("#{ifriendship.user.photo_location}"), ifriendship.user %>
   </div>
   <h5><%= link_to ifriendship.user.name, ifriendship.user %></h5>
-  <% if @followed.include?(ifriendship) %>
-  <%= link_to "remove", ifriendship, :class => "button tiny", :method => :delete, :remote => true %>
+  <% if @user.friends.include?(ifriendship.user) %>
+  <%= link_to "Unfollow", ifriendship, :class => "button alert tiny", :method => :delete, :remote => true %>
   <% else %>
-  <%= link_to "Add Friend", friendships_path(:friend_id => ifriendship),:class => "button tiny", :method => :post, remote: true %>
+  <%= link_to "Follow", friendships_path(:friend_id => ifriendship.user.id),:class => "button tiny", :method => :post, remote: true %>
   <% end %>
   
   <% end %>
