--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,13 +11,12 @@
       </div>
       <div class="row">
         <div class="small-5 small-offset-4 columns">
-          <% if current_user.friends.include?(@user) %>
-          <% @friendship.each do |friendship| %>
-          <%= link_to "Unfollow", friendship, :class => "button right alert", :method => :delete %>
+          <% if user_signed_in? && current_user.friends.include?(@user) %>
+          <% current_user.friendships.where(friend_id: @user.id).each do |friendship| %>
+          <%= link_to "Unfollow", friendship, :class => "button right alert", :method => :delete, remote: true, :id => "user_unfollow_button" %>
           <% end %>
-          <% elsif @user != current_user %>
-          <%= link_to "Follow", friendships_path(:friend_id => @user),:class => "button right", :method => :post, remote: true %>
-          
+          <% elsif user_signed_in? && @user != current_user %>
+          <%= link_to "Follow", friendships_path(:friend_id => @user),:class => "button right", :method => :post, remote: true, :id => "user_follow_button#{@user.id}" %>
           <% else %>
           <% end %>
         </div>
@@ -26,7 +25,7 @@
     </div>
     <div class = "row">
       <div class="medium-12 columns">
-        <% if @user == current_user %>
+        <% if user_signed_in? && @user == current_user %>
         <%= render "my_followers" %>
         <% else %>
         <%= render "user_followers" %>
