added in posts functionality, summarizing content using api.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
   
   <p>
     <strong>Summary:</strong>
-    <%= @post.summary %>
+    <%= simple_format(@post.summary) %>
   </p>
   
   <%= link_to 'Edit', edit_post_path(@post) %> |
