--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,31 +1,54 @@
 <h1>Listing posts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Url</th>
-      <th>Summary</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<% @posts.each do |post| %>
+<div class= "panel small-12 columns">
+  <div class="row">
+    <div class= "small-12 columns">
+      <div class="row">
+        <div class = "small-2 columns">
+          <%= link_to image_tag("#{post.user.photo_location}"), post.user %>
+        </div>
+        <div class = "small-7 columns">
+          <h7><%= link_to post.title, post.url, :target => "_blank" %></h7>
+        </div>
+        <div class = "small-1 columns">
+          RP
+        </div>
+        <div class = "small-2 columns">
+          <h6>0 comments</h6>
+          <div class="row">
+            <div class="small-12 columns">
+              photo,photo
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class = "small-12 columns">
+          <div class = "row">
+            <div class = "small-4 columns">
+              <h5><%= post.user.name %></h5>
+            </div>
+            <div class="medium-6 columns">
+              <a href="#" data-reveal-id="<%=dom_id(post)%>" class="radius button small">Summary</a>
+            </div>
+            <div class="small-2 columns">
+              photo,photo
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="<%=dom_id(post)%>" class="reveal-modal" data-reveal>
+    <h2><%= post.title %></h2>
+    <%= simple_format(post.summary) %>
+    <a class="close-reveal-modal">&#215;</a>
+  </div>
+</div>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.user_id %></td>
-        <td><%= post.url %></td>
-        <td><%= post.summary %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% end %>
 
-<br>
+
 
 <%= link_to 'New Post', new_post_path %>
