--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,4 @@
 <nav class="tab-bar">
-  <section class="left-small" style = 'margin-top: 0px; '>
-    <a class="left-off-canvas-toggle menu-icon" ><span></span></a>
-  </section>
   <section class="middle tab-bar-section" style = 'margin-top: 0px; '>
     <a href="/"><h1 class="title">WeFeed</h1></a>
   </section>
@@ -10,25 +7,7 @@
   </section>
 </nav>
 
- <%= render 'layouts/left_menu' %>
+<%= render 'layouts/left_menu' %>
+<%= render 'layouts/right_menu' %>
 
-<aside class="right-off-canvas-menu">
-  <ul class="off-canvas-list">
-    <% if user_signed_in? %>
-    <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
-    <% else %>
-    <li><%= link_to 'Login', new_user_session_path %></li>
-    <% end %>
-    <% if user_signed_in? %>
-    <li><%= link_to 'Edit account', edit_user_registration_path %></li>
-    <% else %>
-    <li><%= link_to 'Sign up', new_user_registration_path %></li>
-    <% end %>
-    <% if user_signed_in? %>
-    <% if current_user.has_role? :admin %>
-    <li><%= link_to 'Admin', users_path %></li>
-    <% end %>
-    <% end %>
-  </ul>
-</aside>
 
