--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,14 +5,19 @@
   <div class="row">
     <div class= "small-12 columns">
       <div class="row">
-        <div class = "small-2 columns">
+        <div class = "small-2 columns small-2">
           <%= link_to image_tag("#{post.user.photo_location}"), post.user %>
         </div>
-        <div class = "small-7 columns">
+        <div class = "small-6 columns">
           <h7><%= link_to post.title.html_safe, post.url, :target => "_blank" %></h7>
         </div>
-        <div class = "small-1 columns">
-          RP
+        <div class = "small-2 columns">
+          <% if current_user.reposted_posts.include?(post) %>
+          <span class="secondary label">Reposted</span>
+          <% else %>
+          <%= link_to "Repost", reposts_path(:reposted_post_id => post),:class => "button tiny round", :method => :post, remote: true, :id => "#{post.id}" %>
+          <span style="display: none;" <%= ("id='repost-badge#{post.id}'").html_safe %> class="secondary label">Reposted</span>
+          <% end %>
         </div>
         <div class = "small-2 columns">
           <h6>0 comments</h6>
