--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -63,8 +63,10 @@
   <div id="<%=dom_id(post)%>" class="reveal-modal" data-reveal>
     <h2><%= post.title.html_safe %></h2>
     <ul>
+      <% unless post.summary.nil? %>
       <% post.summary.split("[BREAK]").each do |sentence| %>
       <%= simple_format(sentence.html_safe) %>
+      <% end %>
       <% end %>
     </ul>
     <a class="close-reveal-modal">&#215;</a>
