--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
             <div class="row">
               <!-- Nav Sidebar -->
               <!-- This is source ordered to be pulled to the left on larger screens -->
-              <div class="small-9 columns">
+              <div class="large 9 small-12 columns">
               <%= yield %>
               <%= javascript_include_tag "application" %>
               </div>
