--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,16 @@
 <div class="row">
   <div class="medium-12 columns">
-    <div class="row panel large-5 small-5 columns small-centered large-centered">
-      <div class="row">
-        <div class="medium-5 columns">
-          <%=image_tag("#{@user.photo_location}")%>
-        </div>
-        <div class="medium-6 columns">
-          <div class="row">
-            <h1><%= @user.name %></h1>
+    <div class="row">
+      <div class=" panel large-12 small-12 columns small-centered large-centered">
+        <div class="row">
+          <div class="medium-5 columns">
+            <%=image_tag("#{@user.photo_location}")%>
           </div>
-          <div class="row">
+          <div class="medium-6 columns">
+            <div class="row">
+              <h1><%= @user.name %></h1>
+            </div>
+            <div class="row">
               <% if user_signed_in? && current_user.friends.include?(@user) %>
               <% current_user.friendships.where(friend_id: @user.id).each do |friendship| %>
               <%= link_to "Unfollow", friendship, :class => "button large alert", :method => :delete, remote: true, :id => "user_follow_button#{@user.id}" %>
@@ -18,6 +19,7 @@
               <%= link_to "Follow", friendships_path(:friend_id => @user),:class => "button large", :method => :post, remote: true, :id => "user_follow_button#{@user.id}" %>
               <% else %>
               <% end %>
+            </div>
           </div>
         </div>
       </div>
