--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
-<div class="large-6 columns">
+<div class=row >
+  <div class="large-6 columns">
   <p id="notice"><%= notice %></p>
   
   <p>
@@ -14,17 +15,12 @@
   <%= link_to 'Edit', edit_post_path(@post) %> |
   <%= link_to 'Back', posts_path %>
 </div>
+</div>
 
-<% @post.comments.each do |comment| %>
-  <p>
-    <strong>Post:</strong>
-    <%= comment.content.html_safe %>
-  </p>
-<% end %>
 
 <%= form_for([@post, @post.comments.build]) do |f| %>
   <p>
-    <%= f.label :content %><br />
+    <%= f.label "Comment" %>
     <%= f.text_area :content %>
     <%= f.hidden_field :post_id, :value => @post.id %>
   </p>
@@ -32,3 +28,5 @@
     <%= f.submit %>
   </p>
 <% end %>
+<h2>Comments</h2>
+<%= render @post.comments %>
