--- a/app/views/posts/_all_feed.html.erb
+++ b/app/views/posts/_all_feed.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'New Post', new_user_registration_path, class: "button tiny round" %>
+
 
 <% @all_posts.each do |post| %>
 <div class= "panel small-12 columns">
@@ -11,34 +11,35 @@
           <small><%= link_to post.user.name, post.user %></small>
           <% end %>
         </div>
-        <div class = "small-9 columns hide-for-large">
-          <medium><%= link_to post.title.html_safe, post.url, :target => "_blank" %></medium>
-        </div>
-        <div class = "large-10 columns">
-          <div class = "large-12 columns hide-for-small">
-            <%= link_to post.title.html_safe, post.url, :target => "_blank" %>
+        <div class = "small-8 columns large-10 small-9">
+          <div class = "row">
+            <div class = "small-12 columns hide-for-large hide-for-medium">
+              <medium><%= link_to post.title.html_safe, post.url, :target => "_blank" %></medium>
+            </div>
+            <div class = "large-12 columns hide-for-small">
+              <%= link_to post.title.html_safe, post.url, :target => "_blank" %>              
+            </div>
           </div>
-          
-        </div>
-      </div>
-      &nbsp;
-      <div class='row'>
-        <div class = 'large-5 small-8 small-centered columns'>
-          <a href="#" data-reveal-id="<%=dom_id(post)%>" class="radius button tiny">Summary</a>
-          <% if user_signed_in? && (current_user.has_role? :admin) %>
-          <%= link_to "Destroy", post, :confirm => 'Are you sure?', :method => :delete %>
-          <% end %>
-          <% if user_signed_in? %>
-          <% if current_user.reposted_posts.include?(post) %>
-          <span class="secondary label">Reposted</span>
-          <% elsif current_user.posts.include?(post) %>
-          <% else %>
-          <%= link_to "Repost", reposts_path(:reposted_post_id => post),:class => "button tiny round", :method => :post, remote: true, :id => "#{post.id}" %>
-          <span style="display: none;" <%= ("id='repost-badge#{post.id}'").html_safe %> class="secondary label">Reposted</span>
-          <% end %>
-          <% else %>
-          <%= link_to "Repost", new_user_registration_path, :class => "button tiny round"%>
-          <% end %>
+          &nbsp;
+          <div class='row'>
+            <div class = 'large-5 small-8 small-left columns'>
+              <a href="#" data-reveal-id="<%=dom_id(post)%>" class="radius button tiny">Summary</a>
+              <% if user_signed_in? && (current_user.has_role? :admin) %>
+              <%= link_to "Destroy", post, :confirm => 'Are you sure?', :method => :delete %>
+              <% end %>
+              <% if user_signed_in? %>
+              <% if current_user.reposted_posts.include?(post) %>
+              <span class="secondary label">Reposted</span>
+              <% elsif current_user.posts.include?(post) %>
+              <% else %>
+              <%= link_to "Repost", reposts_path(:reposted_post_id => post),:class => "button tiny round", :method => :post, remote: true, :id => "#{@post.id}" %>
+              <span style="display: none;" <%= ("id='repost-badge#{post.id}'").html_safe %> class="secondary label">Reposted</span>
+              <% end %>
+              <% else %>
+              <%= link_to "Repost", new_user_registration_path, :class => "button tiny round"%>
+              <% end %>
+            </div>
+          </div>
         </div>
       </div>
     </div>
