--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,7 @@
   <dd class="active"><a href="#panel2-1">My Feed</a></dd>
   <dd><a href="#panel2-2">FireHose Feed</a></dd>
 </dl>
+<%= link_to 'New Post', new_post_path, class: "button tiny round", id: "new_link", remote: true %>
 <div class="tabs-content">
   <div class="content active" id="panel2-1">
     <%= render 'posts/my_feed' %>
@@ -17,6 +18,7 @@
   <dd><a href="#panel2-1">My Feed</a></dd>
   <dd class="active"><a href="#panel2-2">FireHose Feed</a></dd>
 </dl>
+<%= link_to 'New Post', new_post_path, class: "button tiny round", id: "new_link", remote: true %>
 <div class="tabs-content">
     <div class="content" id="panel2-1">
     <%= render 'posts/my_feed' %>
@@ -28,8 +30,8 @@
 <% end %>
 
 
-
 <% else %>
+<%= link_to 'New Post', new_user_registration_path, class: "button tiny round" %>
 <%= render 'posts/all_feed' %>
 <% end %>
 
