--- a/app/views/posts/_all_feed.html.erb
+++ b/app/views/posts/_all_feed.html.erb
@@ -13,10 +13,10 @@
         </div>
         <div class = "small-8 columns large-10 small-9">
           <div class = "row">
-            <div class = "small-12 columns hide-for-large hide-for-medium">
+            <div class = "small-12 columns hide-for-large-only">
               <medium><%= link_to post.title.html_safe, post.url, :target => "_blank" %></medium>
             </div>
-            <div class = "large-12 columns hide-for-small">
+            <div class = "large-12 columns hide-for-medium-down">
               <%= link_to post.title.html_safe, post.url, :target => "_blank" %>              
             </div>
           </div>
