--- a/app/views/posts/_all_feed.html.erb
+++ b/app/views/posts/_all_feed.html.erb
@@ -32,7 +32,7 @@
               <span class="secondary label">Reposted</span>
               <% elsif current_user.posts.include?(post) %>
               <% else %>
-              <%= link_to "Repost", reposts_path(:reposted_post_id => post),:class => "button tiny round", :method => :post, remote: true, :id => "#{@post.id}" %>
+              <%= link_to "Repost", reposts_path(:reposted_post_id => post),:class => "button tiny round", :method => :post, remote: true, :id => "#{post.id}" %>
               <span style="display: none;" <%= ("id='repost-badge#{post.id}'").html_safe %> class="secondary label">Reposted</span>
               <% end %>
               <% else %>
