bugfix for posts/index/@post buttons layout

--- a/app/views/posts/_my_feed.html.erb
+++ b/app/views/posts/_my_feed.html.erb
@@ -24,7 +24,7 @@
           </div>
                 &nbsp;
           <div class='row'>
-            <div class = 'large-5 small-8 small-left columns'>
+            <div class = 'small-12 small-left columns'>
               <a href="#" data-reveal-id="<%=dom_id(post)%>" class="radius button tiny">Summary</a>
               <% if user_signed_in? && (current_user.has_role? :admin) %>
               <%= link_to "Destroy", post, :confirm => 'Are you sure?', :method => :delete %>
